changes params drawing

--- a/templates/index.html
+++ b/templates/index.html
@@ -190,7 +190,7 @@
         }
 
         // Smoothing parameters
-        const smoothingFactor = 0.35; // Adjust as needed (0.0 - no smoothing, 1.0 - no movement)
+        const smoothingFactor = 0.85;
         let smoothedX = 0;
         let smoothedY = 0;
 
